# homelab

./: .ansible-lint  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  ansible.cfg  deploy-container.yml  deploy-service-dummy.yml  deploy-service.yml  deploy_container.yml  home.yml  inventory.ini  pyproject.toml  requirements.yml  server-config.yml
.github/workflows/: ci.yml
ci/: entrypoint.sh
docs/: dev.md  osx.md  private-data.md  roadmap.md
docs/ideas/: lab-cli.md
examples/vars/work/: example-service.yml
templates/containers/coredns/: corefile
vars/containers/: consul.yml  coredns.yml  debian.yml  dnsmasq.yml  grafana.yml  heplify-server.yml  homer.yml  kamailio.yml  node-exporter.yml  pihole.yml  pjsua.yml  postgres.yml  prom.yml  pushgateway.yml  rabbitmq.yml  registrator.yml  registry.yml  router1-frr.yml  router2-vyos.yml  switch1-frr.yml  switch2-ovs.yml  syncthing.yml  traefik.yml  vaul.yml  whoami.yml
vars/install/: desktop.yml
vars/services/: dummy.yml  lagostim-constanca-hermes.yml  lagostim-personal-hermes.yml  lagostim-work-hermes.yml
